--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Devourer of Gods - Terraria Calamity</title>
+    <title>Пожиратель богов захватил ваш жалкий сайт!</title>
     <!-- jQuery CDN -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Google Fonts: Press Start 2P for retro gaming feel -->
